config/network-policy/allow_ingress_to_ssp_operator_webhook_and_metrics.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ssp-operator-allow-ingress-to-ssp-operator-webhook-and-metrics
spec:
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      name: ssp-operator
  policyTypes:
  - Ingress
